Добавил определитель для выбранных фильтров.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="header__menu">
         <div class="header__menu__settings">
             <img src="img/calendar.png" alt="" class="settings-date">
-            <img src="img/check-mark(1).png" alt="" class="settings-done">
+            <img src="img/check-mark(1).png" alt="" class="settings-done chosen">
             <img src="img/free-icon-settings-3991302.png" alt="" class="settings">
         </div>
         <button class="newTask">Создать задачу</button>
